Update Java version references from 21 to 17 in documentation and code comments; refactor JsonNormalizer to replace switch expressions with if-else statements for better readability.